// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeByBlockchain renders correctly with button 1`] = `
<WhatsNew__Container>
  <WhatsNew__Row
    marginBottom="10px"
  >
    <text
      color="brand-primary"
      size="24px"
      weight={600}
    >
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trading_your_crypto"
        values={Object {}}
      />
    </text>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="24px"
  >
    <ExchangeByBlockchain__DarkText
      size="14px"
    >
      <FormattedMessage
        defaultMessage="November 2018"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.november2018"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="24px"
  >
    <ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Swap enables you to trade crypto with the best prices and quick settlement, all while maintaining full control of your funds."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.swap_enables_trade"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="8px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Low fees"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.low_fees"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Great news! Get the best prices without having to leave the security of your Wallet."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.best_prices"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="8px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Higher Limits"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.higher_limits"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Like to trade big? Get access to limits of up to $25,000 per day."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trade_big"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="32px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Easy to use"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.easy_to_use"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Get started in just a few steps."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.get_started"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row>
    <ExchangeByBlockchain__GetStartedButton>
      <FormattedMessage
        defaultMessage="Get Started"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.started"
        values={Object {}}
      />
    </ExchangeByBlockchain__GetStartedButton>
  </WhatsNew__Row>
</WhatsNew__Container>
`;

exports[`ExchangeByBlockchain renders correctly with exchange link 1`] = `
<WhatsNew__Container>
  <WhatsNew__Row
    marginBottom="10px"
  >
    <text
      color="brand-primary"
      size="24px"
      weight={600}
    >
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trading_your_crypto"
        values={Object {}}
      />
    </text>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="24px"
  >
    <ExchangeByBlockchain__DarkText
      size="14px"
    >
      <FormattedMessage
        defaultMessage="November 2018"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.november2018"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="24px"
  >
    <ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Swap enables you to trade crypto with the best prices and quick settlement, all while maintaining full control of your funds."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.swap_enables_trade"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="8px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Low fees"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.low_fees"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Great news! Get the best prices without having to leave the security of your Wallet."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.best_prices"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="8px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Higher Limits"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.higher_limits"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Like to trade big? Get access to limits of up to $25,000 per day."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trade_big"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row
    marginBottom="32px"
  >
    <ExchangeByBlockchain__DarkText>
      <ExchangeByBlockchain__PrimaryText>
        <FormattedMessage
          defaultMessage="Easy to use"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.easy_to_use"
          values={Object {}}
        />
      </ExchangeByBlockchain__PrimaryText>
      <ExchangeByBlockchain__DarkText
        hideOnMobile={true}
      >
         - 
      </ExchangeByBlockchain__DarkText>
      <FormattedMessage
        defaultMessage="Get started in just a few steps."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.get_started"
        values={Object {}}
      />
    </ExchangeByBlockchain__DarkText>
  </WhatsNew__Row>
  <WhatsNew__Row>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/swap"
    >
      <ExchangeByBlockchain__GetStartedButton>
        <FormattedMessage
          defaultMessage="Make Swap"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.makeswap"
          values={Object {}}
        />
      </ExchangeByBlockchain__GetStartedButton>
    </LinkContainer>
  </WhatsNew__Row>
</WhatsNew__Container>
`;
